omweather (0.28.13) unstable; urgency=low

  * Updated Slovak tanslations

 -- Vlad Vasiliev <vlad@gas.by>  Wen, 23 Feb 2011 20:44:20 +0200

omweather (0.28.12) unstable; urgency=low

  * Fixed segmantation fault 
  * Updated Spain and Slovak tanslations

 -- Vlad Vasiliev <vlad@gas.by>  Wen, 23 Feb 2011 20:44:20 +0200

omweather (0.28.11) unstable; urgency=low

  * Applied patches from Timeless
  * Added new mod Marina from Wazd 
  * Updated  French, Rissian, Finland, Germany tanslations

 -- Vlad Vasiliev <vlad@gas.by>  Sun, 13 Feb 2011 20:44:20 +0200

omweather (0.28.10) unstable; urgency=low

  * Changed downloading code for gismeteo.ru 

 -- Vlad Vasiliev <vlad@gas.by>  Tue, 21 Dec 2010 23:44:20 +0200

omweather (0.28.9) unstable; urgency=low

  * Updated Spain translation
  * Fixed problem with the big font size in a current weather widget for
  negative temperatures
  * Restored proxy support

 -- Vlad Vasiliev <vlad@gas.by>  Sun, 5 Dec 2010 13:44:20 +0200

omweather (0.28.8) unstable; urgency=low

  * Added Slovak localization
  * Updated French translation
  * Fixed  a mentioned problem with unit of 'feel like' temperature. Thanks
    Roman Moravčík for patch

 -- Vlad Vasiliev <vlad@gas.by>  Mon, 1 Nov 2010 13:44:20 +0200

omweather (0.28.7) unstable; urgency=low

  * Fixed segmentation fault in applet mode
  * Rename mod Extra_coffe to ExtraCoffe
  * Redesign font color for ExtraCoffe mod (Thanks GaRy delaMEr)
  * Update Finish, Spain, Russian translation

 -- Vlad Vasiliev <vlad@gas.by>  Sun, 27 Sep 2010 23:44:20 +0200

omweather (0.28.6) unstable; urgency=low

  * Fixed segmentation fault in settings
  * Fixed path for background image  

 -- Vlad Vasiliev <vlad@gas.by>  Sun, 26 Sep 2010 19:44:20 +0200

omweather (0.28.5) unstable; urgency=low

  * Added modification "Extra coffe" 

 -- Vlad Vasiliev <vlad@gas.by>  Sun, 26 Sep 2010 19:24:20 +0200

omweather (0.28.4) unstable; urgency=low
